fixed text under grid moving up into it when sizing got too small-margin bottom is enough that any usable size of grid won't have text in the way

--- a/static/styles.css
+++ b/static/styles.css
@@ -36,10 +36,11 @@ nav ul li a:hover {
     display: flex;
     justify-content: center;
     align-content: center;
-    padding: 2em;
+    
     width: 75vw;
     height: 75vh;
     margin: 0 auto;
+    margin-bottom: 4.5em;
 }
 
 .container {
@@ -63,3 +64,7 @@ nav ul li a:hover {
     align-items: center;
 }
 /* 2048 end */
+
+.main {
+    margin-bottom: 5%;
+}
